--- a/config/WSE.conf
+++ b/config/WSE.conf
@@ -9,5 +9,5 @@ num.factors=10
 num.max.iter=30
 learnRate=-init 0.1 -max 1
 reg.lambda=-u 0.05 -i 0.05 -b 0.1 -s 0.1
-WST=-alpha 0.6 -eta 0.2
+WSE=-alpha 0.6 -eta 0.2
 output.setup=on -dir ../results/
