--- a/config/gRSTE.conf
+++ b/config/gRSTE.conf
@@ -2,12 +2,12 @@ ratings=../dataset/epinions/sample-ratings.txt
 social=../dataset/epinions/sample-trusts.txt
 ratings.setup=-columns 0 1 2
 social.setup=-columns 0 1 2
-recommender=RSTE
+recommender=gRSTE
 evaluation.setup=-cv 5
 item.ranking=off -topN 10 -ignore -1
 num.factors=10
 num.max.iter=30
 learnRate=-init 0.1 -max 1
 reg.lambda=-u 0.05 -i 0.05 -b 0.1 -s 0.1
-RSTE=-alpha 0.6
+gRSTE=-alpha 0.6
 output.setup=on -dir ../results/
