--- a/config/gSoRec.conf
+++ b/config/gSoRec.conf
@@ -4,7 +4,7 @@ ratings.setup=-columns 0 1 2
 social.setup=-columns 0 1 2
 recommender=gSoRec
 evaluation.setup=-cv 5
-item.ranking=off -topN 10 -ignore -1
+item.ranking=on -topN 10 -ignore -1
 num.factors=10
 num.max.iter=30
 learnRate=-init 0.1 -max 1
