--- a/config/SocialMF.conf
+++ b/config/SocialMF.conf
@@ -1,9 +1,9 @@
-ratings=../dataset/epinions/sample-ratings.txt
-social=../dataset/epinions/sample-trusts.txt
+ratings=../dataset/filmtrust/trainset.txt
+social=../dataset/filmtrust/trust.txt
 ratings.setup=-columns 0 1 2
 social.setup=-columns 0 1 2
 recommender=SocialMF
-evaluation.setup=-cv 5
+evaluation.setup=-testSet ../dataset/FilmTrust/testset.txt
 item.ranking=off -topN 10 -ignore -1
 num.factors=10
 num.max.iter=30
