--- a/config/EE.conf
+++ b/config/EE.conf
@@ -1,7 +1,7 @@
-ratings=../dataset/FilmTrust/trainset.txt
+ratings=../dataset/filmtrust/trainset.txt
 ratings.setup=-columns 0 1 2
 recommender=EE
-evaluation.setup=-ap 0.3
+evaluation.setup=-testSet ../dataset/filmtrust/testset.txt
 item.ranking=off -topN 10 -ignore -1
 num.factors=10
 num.max.iter=30
