--- a/config/PMF.conf
+++ b/config/PMF.conf
@@ -1,7 +1,7 @@
 ratings=../dataset/FilmTrust/trainset.txt
 ratings.setup=-columns 0 1 2
 recommender=PMF
-evaluation.setup=-cv 10
+evaluation.setup=-testSet ../dataset/FilmTrust/testset.txt
 item.ranking=off -topN 10 -ignore -1
 num.factors=10
 num.max.iter=30
