add new method W2V2

--- a/config/RTE.conf
+++ b/config/RTE.conf
@@ -1,8 +1,8 @@
 ratings=../dataset/filmtrust/trainset.txt
-social=../dataset/filmtrust/trust.txt
+social=../dataset/epinions/2sample-trusts.txt
 ratings.setup=-columns 0 1 2
 social.setup=-columns 0 1 2
-recommender=SRTE
+recommender=RTE
 evaluation.setup=-testSet ../dataset/filmtrust/testset.txt
 item.ranking=off -topN -1 -ignore -1
 similarity=cos
