--- a/config/W2V.conf
+++ b/config/W2V.conf
@@ -1,11 +1,14 @@
 ratings=../dataset/filmtrust/trainset.txt
 ratings.setup=-columns 0 1 2
-recommender=EE
+social.setup=-columns 0 1 2
+recommender=W2V
 evaluation.setup=-testSet ../dataset/filmtrust/testset.txt
-item.ranking=off -topN 10 -ignore -1
+item.ranking=off -topN -1 -ignore -1
+similarity=cos
+num.shrinkage=30
+num.neighbors=20
 num.factors=10
-num.max.iter=10
+num.max.iter=30
 learnRate=-init 0.005 -max 1
-reg.lambda=-u 0.005 -i 0.005 -b 0.005 -s 0.1
-EE=-d 50
+reg.lambda=-u 0.05 -i 0.05 -b 0.05 -s 0.1
 output.setup=on -dir ../results/
